# Madness

./: .gitignore  CMakeLists.txt  README.md  deploy.sh
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
